--- a/Front_EndDev/your_best_self/src/app/comp-compartidos/components/footer/footer.component.html
+++ b/Front_EndDev/your_best_self/src/app/comp-compartidos/components/footer/footer.component.html
@@ -1,15 +1,15 @@
 <section>
-<div class="flex flex-col justify-center items-center gap-3 bg-[#6E92DA] h-52">
-<h1 class="text-slate-100 text-2xl">Soporte & Contacto</h1>
+<div class="flex justify-center items-center gap-3">
+<h1 class="text-slate-600 text-xl">Soporte & Contacto</h1>
 <span class="flex gap-11">
     <a href="https://www.instagram.com/ferfantini.ff/" target="_blank">
-        <img src="../../../../assets/icons8-instagram-48.png" alt="ig">
+        <img class="w-10" src="../../../../assets/icons8-instagram-48.png" alt="ig">
     </a>
     <a href="https://www.facebook.com/fernando.fantini.984/" target="_blank">
-        <img src="../../../../assets/icons8-facebook-48.png" alt="fc">
+        <img class="w-10" src="../../../../assets/icons8-facebook-48.png" alt="fc">
     </a>
     <a href="https://www.linkedin.com/in/fernando-fantini-829163288/" target="_blank">
-        <img src="../../../../assets/icons8-linkedin-48.png" alt="ln">
+        <img class="w-10" src="../../../../assets/icons8-linkedin-48.png" alt="ln">
     </a>    
 </span>
 </div>
