--- a/Front_EndDev/your_best_self/src/app/comp-compartidos/components/nav-bar2/nav-bar2.component.html
+++ b/Front_EndDev/your_best_self/src/app/comp-compartidos/components/nav-bar2/nav-bar2.component.html
@@ -3,14 +3,13 @@
         <button routerLink="" class="text-slate-400">YourBestSelf</button>
         <div class="flex items-center gap-6">
             <div class="flex gap-1 items-center">
-                <div class=" flex items-center rounded-lg h-8">
-                    <button [@hiden]="animar ? 'si' : 'no'" class="absolute bg-[#F0F7FE] rounded-l p-1">
-                        <img width="20" src="../../../../assets/Vector.png" alt="..">
+                <div class=" flex items-center justify-end rounded-lg h-8">
+                    <button [@hiden]="animar ? 'si' : 'no'" class="absolute rounded-l p-1">
+                        <img width="16" src="../../../../assets/Vector.png" alt="..">
                     </button>
-                    <div style="width: 31px;"></div>
                     <input aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"
                         [@desplazamiento]="animar ? 'derecha' : 'izquierda'"
-                        class="focus:outline-none text-slate-600 text-sm rounded-r h-6 w-full" type="text"
+                        class="focus:outline-none text-slate-600 text-sm rounded h-7 w-full" type="text"
                         name="Search">
                 </div>
                 <button (click)="toggleAnimacion()"><img width="20" src="../../../../assets/Vector.png"
@@ -21,8 +20,8 @@
                 <img width="10" src="../../../../assets/Polygon 1.png" alt="..">
             </button>
             <div [@desplazamiento2]="animar2 ? 'abajo' : 'arriba'"
-                class="w-40  rounded text-white top-14 right-1 bg-white border-2 border-[#6374AE] absolute">
-                <div class="flex flex-col m-1 gap-1">
+                class="flex flex-col justify-center p-1 w-40 rounded text-white top-14 right-1  bg-white border-2 border-[#6374AE] absolute">
+                <div class="flex flex-col h-full justify-evenly gap-1">
                     <button *ngIf="animar2" class="bg-[#9FC2F1] rounded">Mi prefil</button>
                     <button *ngIf="animar2" class="bg-[#9FC2F1] rounded">Mi progreso</button>
                 </div>
@@ -32,10 +31,12 @@
     <section class="flex justify-center items-center px-4 h-11 rounded-bl-full bg-[#9FC2F1]">
         <ul class="flex gap-5 text-sm text-white">
             <button routerLink="/home" class="hover:underline">Entrenamientos</button>
-            <button routerLink="/home/comp_entrenamientos" class="hover:underline">Entrenamientos de la comunidad</button>
+            <button routerLink="/home/comp_entrenamientos" class="hover:underline">Entrenamientos de la
+                comunidad</button>
             <button routerLink="/home/pers_entrenamientos" class="hover:underline">Mis Entrenamientos</button>
+            <button routerLink="/home/library_Ejercices" class="hover:underline">Bibloteca de Ejercicios</button>
         </ul>
-   <!--      <section class="flex flex-col">
+        <!--      <section class="flex flex-col">
         <button (click)="toggleAnimacion3()"class="bg-white text-[#84AEE5] rounded-2xl text-sm px-2 py-1 border-[#3273DE] border-2">Filtrar</button>
         
             <div [@hiden]="animar3 ? 'si' : 'no'" class="grid gap-3 grid-cols-2 absolute right-1 top-32 p-2 rounded bg-[#C3DFFA]">
