--- a/Front_EndDev/src/app/comp-compartidos/components/card/card.component.html
+++ b/Front_EndDev/src/app/comp-compartidos/components/card/card.component.html
@@ -1,4 +1,4 @@
-<button class="bg-[#DDECFC] hover:bg-[#bad8f8] text-start rounded-md border-2 border-[#9FC2F1]" *ngFor="let item of ejercices">
+<button (click)="getIdMetod(item.Id_ejercicios)" class="bg-[#DDECFC] hover:bg-[#bad8f8] text-start rounded-md border-2 border-[#9FC2F1]" *ngFor="let item of ejercices">
     <div class="flex flex-col gap-2 mb-3">
         <img class="h-40 w-full rounded-t-md" src={{item.imagen}} alt="aca aparecerian las imagenes">
         <span class="flex h-9 mx-3">
