--- a/Front_EndDev/src/app/pages/home/pages/libray-ejecices/libray-ejecices.component.html
+++ b/Front_EndDev/src/app/pages/home/pages/libray-ejecices/libray-ejecices.component.html
@@ -1,12 +1,19 @@
-<section *ngIf="ejercices.length > 0" class="flex">
-<button class="absolute left-11 mt-1 bg-[#295fcc] text-white rounded px-2 py-1">Filtrar</button>
-</section>
-<article class="flex flex-col m-10" *ngIf="ejercices.length > 0" >
-<section class="grid grid-cols-4 gap-4">
-    <app-card></app-card>
-</section>
-<app-modal></app-modal>
-</article>
-<div *ngIf="ejercices.length === 0"  class="w-full h-full flex justify-center items-center">
-    <mat-spinner></mat-spinner>
-</div>
+
+    <section *ngIf="ejercices.length > 0" class="flex">
+        <button (click)="animarFunction()" 
+            class="absolute left-11 mt-1 bg-[#295fcc] text-white rounded px-2 py-1">Filtrar</button>
+    </section>
+    <section class="flex flex-col m-10" *ngIf="ejercices.length > 0">
+        <app-modal-filters-e (ejercicios)="handleFilter($event)" [animacion]="animar" (animar)="recibedAnimar($event)"></app-modal-filters-e>
+        <app-card (sendBoolean)="recivedBoolean($event)" (sendExercise)="recivedmensage($event)"
+            class="grid grid-cols-4 gap-4" [ejercices]="ejercices"></app-card>
+        <app-pagination [allEjercices]="ejercices" (ejercices)="recivedEjercices($event)"
+            [currentPage]="currentPage"></app-pagination>
+            
+        <app-modal [exerciceId]="exerciceId" [BooleanM]="booleanModel" class="flex justify-center items-center"
+            (sendBooleanM)="recivedBooleanM($event)"></app-modal>
+
+    </section>
+    <div *ngIf="ejercices.length === 0" class="w-full h-full flex justify-center items-center">
+        <mat-spinner></mat-spinner>
+    </div>
