--- a/Front_EndDev/src/app/comp-compartidos/components/pagination/pagination.component.html
+++ b/Front_EndDev/src/app/comp-compartidos/components/pagination/pagination.component.html
@@ -1,4 +1,4 @@
-<article [ngClass]="{'mt-28': allEjercices.length < 5, 'mt-5': allEjercices.length > 5} " class="flex justify-center items-center">
+<article class="flex justify-center mt-5 items-center">
     <nav aria-label="Page navigation example">
         <ul class="flex items-center -space-x-px h-10 text-base">
             <li>
