--- a/Front_EndDev/src/app/pages/home/pages/libray-ejecices/libray-ejecices.component.html
+++ b/Front_EndDev/src/app/pages/home/pages/libray-ejecices/libray-ejecices.component.html
@@ -1,19 +1,23 @@
+<section *ngIf="ejercices.length > 0" class="flex">
+    <button (click)="animarFunction()"
+        class="absolute left-11 mt-1 bg-[#295fcc] text-white rounded px-2 py-1">Filtrar</button>
+</section>
+<section class="flex flex-col m-10" *ngIf="ejercices.length > 0">
+    <app-modal-filters-e [currentPage]="currentPage" (currentPageEvent)="recibedCurrentPage($event)"
+        (ejercicesLength)="recivedEjercicesLength($event)" (filter)="booleanFilter($event)"
+        (ejercicios)="handleFilter($event)" [animacion]="animar" (animar)="recibedAnimar($event)"></app-modal-filters-e>
+    <app-card (sendBoolean)="recivedBoolean($event)" (sendExercise)="recivedmensage($event)"
+        class="grid grid-cols-4 gap-4" [ejercices]="ejercices"></app-card>
+    <span *ngIf="ejercices.length < 5" class="mt-16"></span>
+    <app-pagination *ngIf="!filter" (ejercicesLengthEmit)="recivedEjercicesLength($event)" [allEjercices]="ejercices"
+        (ejercices)="recivedEjercices($event)" [currentPage]="currentPage"></app-pagination>
+    <app-pagination-fd *ngIf="filter" [currentPage]="currentPage" [ejercices]="ejercicesLength"
+        (ejercicios)="ejercicesFilterRecived($event)" [ejerciciosfiltrados]="ejercices"></app-pagination-fd>
 
-    <section *ngIf="ejercices.length > 0" class="flex">
-        <button (click)="animarFunction()" 
-            class="absolute left-11 mt-1 bg-[#295fcc] text-white rounded px-2 py-1">Filtrar</button>
-    </section>
-    <section class="flex flex-col m-10" *ngIf="ejercices.length > 0">
-        <app-modal-filters-e (filter)="booleanFilter($event)" (ejercicios)="handleFilter($event)" [animacion]="animar" (animar)="recibedAnimar($event)"></app-modal-filters-e>
-        <app-card (sendBoolean)="recivedBoolean($event)" (sendExercise)="recivedmensage($event)"
-            class="grid grid-cols-4 gap-4" [ejercices]="ejercices"></app-card>
-        <app-pagination [filter]="filter" [allEjercices]="ejercices" (ejercices)="recivedEjercices($event)"
-            [currentPage]="currentPage"></app-pagination>
-            
-        <app-modal [exerciceId]="exerciceId" [BooleanM]="booleanModel" class="flex justify-center items-center"
-            (sendBooleanM)="recivedBooleanM($event)"></app-modal>
+    <app-modal [exerciceId]="exerciceId" [BooleanM]="booleanModel" class="flex justify-center items-center"
+        (sendBooleanM)="recivedBooleanM($event)"></app-modal>
 
-    </section>
-    <div *ngIf="ejercices.length === 0" class="w-full h-full flex justify-center items-center">
-        <mat-spinner></mat-spinner>
-    </div>
+</section>
+<div *ngIf="ejercices.length === 0" class="w-full h-full flex justify-center items-center">
+    <mat-spinner></mat-spinner>
+</div>
