--- a/Front_EndDev/src/app/comp-compartidos/components/nav-bar2/nav-bar2.component.html
+++ b/Front_EndDev/src/app/comp-compartidos/components/nav-bar2/nav-bar2.component.html
@@ -1,6 +1,8 @@
 <nav class="flex flex-col ">
     <section class="flex items-center justify-between w-full h-16 px-8 bg-[#C3DFFA] border-b border-[#295FCC]">
-        <button routerLink="" class="text-slate-400">YourBestSelf</button>
+        <button routerLink="" class="text-white font-medium ">
+           Your Best Self
+        </button>
         <div class="flex items-center gap-6">
             <div *ngIf="!obj.misEntrenamientos" class="flex gap-1 items-center">
                 <div class=" flex items-center justify-end rounded-lg h-8">
@@ -18,13 +20,14 @@
             </div>
             <span *ngIf="user" class="text-[#295FCC]">{{user.nombreUsuario}}</span>
             <button (click)="toggleAnimacion2()" class="flex gap-2 items-center">
-                <img width="50" src="../../../../assets/Ellipse 4.png" alt="..">
+                <img *ngIf="!user.imagen" width="50" src="../../../../assets/Ellipse 4.png" alt="..">
+                <img *ngIf="user.imagen" class="rounded-full" width="50" [src]="user.imagen" alt="..">
                 <img width="10" src="../../../../assets/Polygon 1.png" alt="..">
             </button>
             <div [@desplazamiento2]="animar2 ? 'abajo' : 'arriba'"
                 class="flex flex-col justify-center p-1 w-40 rounded text-white top-14 right-1  bg-white border-2 border-[#6374AE] absolute">
                 <div class="flex flex-col h-full justify-evenly gap-1">
-                    <button *ngIf="animar2" class="bg-[#9FC2F1] rounded">Mi prefil</button>
+                    <button routerLink="/perfil" *ngIf="animar2" class="bg-[#9FC2F1] rounded">Mi prefil</button>
                     <button *ngIf="animar2" class="bg-[#9FC2F1] rounded">Mi progreso</button>
                     <button (click)="cerrarSesion()" *ngIf="animar2" class="bg-red-400 rounded">Cerrar sesíon</button>
                 </div>
