--- a/Front_EndDev/src/app/pages/home/pages/entrenamientos/entrenamientos.component.html
+++ b/Front_EndDev/src/app/pages/home/pages/entrenamientos/entrenamientos.component.html
@@ -40,7 +40,7 @@
     <app-modal [exerciceId]="ejercicio" [BooleanM]="modal" class="flex justify-center items-center"
         (sendBooleanM)="recivedBooleanM($event)"></app-modal>
 </article>
-<div *ngIf="!training.nombre_entrenamiento" class="w-full h-full flex justify-center items-center">
+<div *ngIf="!training.imagen" class="w-full h-full flex justify-center items-center">
     <mat-spinner></mat-spinner>
 </div>
 <app-inicio-entrenamiento (finishBoolean)="recivedFinishB($event)"  (start)="recivedBooleanS($event)" [series]="series" [training]="training" [ejercicio2]="ejercicio" *ngIf="start"></app-inicio-entrenamiento>
