--- a/Front_EndDev/src/app/pages/verify/verify.component.html
+++ b/Front_EndDev/src/app/pages/verify/verify.component.html
@@ -1,5 +1,5 @@
 <article class="flex flex-col w-full h-full justify-center items-center">
-     <div class="flex flex-col shadow-sm gap-2 p-10 bg-white w-80" *ngIf="verify">
+     <div class="flex flex-col shadow-sm gap-2 p-10 bg-white w-80" *ngIf="verify&&verify !== 'loading'">
         <h1 class="text-lime-500 text-xl">Estas verificado</h1>
         <button (click)="handleExit()" class="py-1 px-2 bg-lime-400 text-white">Continuar</button>
      </div>
