--- a/Front_EndDev/src/app/comp-compartidos/components/inicio-entrenamiento/inicio-entrenamiento.component.html
+++ b/Front_EndDev/src/app/comp-compartidos/components/inicio-entrenamiento/inicio-entrenamiento.component.html
@@ -11,7 +11,7 @@
                 x{{ejercicio2.repeticiones}} Repeticiones / Quedan {{ejercicio2.series}} series
             </span>
             <span class="text-2xl text-center text-[#295FCC]" *ngIf="ejercicio2.tiempo">
-                Con {{tiempoEjercicio}} segundos
+                {{tiempoEjercicio}} segundos
             </span>
             <span class="text-2xl text-center text-[#295FCC]" *ngIf="ejercicio2.lado">
                 De lado: {{ejercicio2.lado}}
