--- a/Front_EndDev/src/app/pages/perfil/pages/progreso/progreso.component.html
+++ b/Front_EndDev/src/app/pages/perfil/pages/progreso/progreso.component.html
@@ -1,6 +1,34 @@
-<article class="flex">
+<main class="flex h-screen from-[#9FC2F1] to-[#FFFFFF]"
+    style="background: linear-gradient(to top, #9FC2F1 55%, #F0F7FE 45%);">
     <app-profile-nav class="w-1/4"></app-profile-nav>
-    <div class="w-3/4 m-10">
+    <div class="flex flex-col w-3/4 m-10">
+
         <h1 class="text-3xl font-bold text-[#295FCC]">Progreso</h1>
+        <div class="flex flex-col m-10 gap-12">
+            <article class="flex flex-col gap-14 px-20">
+                <section class="grid grid-cols-2 gap-20">
+                    <div class="bg-white shadow-md rounded text-center p-3">
+                        <h4 class="text-2xl text-[#84AEE5]">Racha de dias entrenados</h4>
+                        <div class="flex w-full h-20 text-5xl text-[#295FCC] items-center justify-center">
+                            <p>0</p>
+                            <img src="../../../../../assets/fire-svgrepo-com 1.png" width="50px" alt="">
+                        </div>
+                    </div>
+                    <div class="bg-white rounded">Entrenamientos por semana</div>
+                </section>
+                <section class="grid grid-cols-2 gap-20">
+                    <div class="flex flex-col gap-2">
+                        <h4 class="text-xl text-white text-center">Calendario de actividades</h4>
+                        <div class="bg-white h-40 rounded">Calendario</div>
+                    </div>
+                    <div class="flex flex-col gap-2">
+                        <h4 class="text-xl text-white text-center">Meta de peso ideal</h4>
+                        <div class="bg-white rounded mx-14 text-[#295FCC] text-2xl text-center py-1">De {{user.peso}}Kg a {{user.pesoIdeal}}kg</div>
+                    </div>
+                </section>
+            </article>
+        </div>
+
     </div>
-</article>
+
+</main>
