--- a/Front_EndDev/src/app/pages/perfil/pages/seguridad/seguridad.component.html
+++ b/Front_EndDev/src/app/pages/perfil/pages/seguridad/seguridad.component.html
@@ -1,7 +1,7 @@
 <article class="flex">
     <app-profile-nav class="w-1/4"></app-profile-nav>
     <div *ngIf="security && user.nombre" class="w-3/4 m-10">
-        <h1 class="text-3xl font-bold text-[#295FCC]">Seguridad</h1>
+        <h1 class="text-3xl h-4 font-bold text-[#295FCC] mb-2">Seguridad</h1>
         <section class="flex w-full flex-col gap-2 items-center justify-center">
             <div class="flex flex-col gap-2 w-1/2">
                 <span class="flex flex-col gap-1">
@@ -17,7 +17,7 @@
                     <p class="text-red-900 text-xs" [hidden]="email.valid || email.untouched">Debe ser un correo
                         electronico válido</p>
                     <div class="flex w-full justify-end">
-                        <button (click)="changeEmail()" class="py-1 px-2 rounded mt-3 text-red-400 bg-white"
+                        <button (click)="changeEmail()" class="py-1 px-2 rounded mt-1 text-red-400 bg-white"
                             [disabled]="!email.valid">Cambiar email</button>
                     </div>
                 </span>
@@ -50,7 +50,7 @@
                             <span class="text-red-700 text-xs" >Las contraseñas deben coincidir</span>
                         </div>
                     <div class="flex w-full justify-end">
-                        <button class="bg-white py-1 px-2 rounded mt-3 text-red-400" [disabled]="!miFormulario.get('repeatNewPassword')?.valid || !miFormulario.get('newPassword')?.valid">Cambiar contraseña</button>
+                        <button class="bg-white py-1 px-2 rounded mt-1 text-red-400" [disabled]="!miFormulario.get('repeatNewPassword')?.valid || !miFormulario.get('newPassword')?.valid">Cambiar contraseña</button>
                     </div>
                 </form>
 
