--- a/Front_EndDev/src/app/pages/perfil/pages/progreso/progreso.component.html
+++ b/Front_EndDev/src/app/pages/perfil/pages/progreso/progreso.component.html
@@ -1,26 +1,13 @@
 <main class="flex h-screen from-[#9FC2F1] to-[#FFFFFF]"
     style="background: linear-gradient(to top, #9FC2F1 55%, #F0F7FE 45%);">
     <app-profile-nav class="w-1/4"></app-profile-nav>
-    <div *ngIf="user.peso" class="flex flex-col w-3/4 m-10">
+    <div *ngIf="trainingLogObj.minutos" class="flex flex-col w-3/4 m-10">
         <h1 class="text-3xl font-bold text-[#295FCC]">Progreso</h1>
         <div class="flex flex-col m-10 gap-12">
             <article class="flex flex-col gap-14 px-20">
                 <section class="grid grid-cols-2 gap-20">
-                    <div class="bg-white shadow-md rounded text-center p-3">
-                        <h4 class="text-2xl text-[#84AEE5]">Racha de dias entrenados</h4>
-                        <div class="flex w-full h-20 text-5xl text-[#295FCC] items-center justify-center">
-                            <p>0</p>
-                            <img src="../../../../../assets/fire-svgrepo-com 1.png" width="50px" alt="">
-                        </div>
-                    </div>
-                    <div class="flex flex-col items-center gap-2">
-                        <span
-                            class="flex bg-[#6AAFF0] justify-center text-2xl px-10 text-white text-center items-center w-full rounded h-2/3">Entrenamientos
-                            de la semana</span>
-                        <div class="w-full">
-                            <app-trainingsinweek></app-trainingsinweek>
-                        </div>
-                    </div>
+                    <app-racha-user [id]="user.id_usuario"></app-racha-user>
+                    <app-week-trainings [id]="user.id_usuario"></app-week-trainings>
                 </section>
                 <section class="grid grid-cols-2 gap-20">
                     <div class="flex flex-col gap-1">
@@ -72,7 +59,7 @@
         </div>
 
     </div>
-    <div *ngIf="!user.peso" class="flex w-3/4 m-10 justify-center items-center">
+    <div *ngIf="!trainingLogObj.minutos" class="flex w-3/4 m-10 justify-center items-center">
         <mat-spinner></mat-spinner>
     </div>
 </main>
