--- a/Front_EndDev/src/app/comp-compartidos/components/week-trainings/week-trainings.component.html
+++ b/Front_EndDev/src/app/comp-compartidos/components/week-trainings/week-trainings.component.html
@@ -1,8 +1,19 @@
 <div class="flex flex-col items-center gap-2 h-full">
     <span
-        class="flex bg-[#6AAFF0] justify-center text-2xl px-10 text-white text-center items-center w-full h-2/3 rounded">Entrenamientos
-        de la semana</span>
+        class="flex bg-[#6AAFF0] justify-center text-2xl px-10 text-white text-center items-center w-full h-2/3 rounded">
+        Entrenamientos de la semana</span>
     <div class="w-full">
-        <app-trainingsinweek></app-trainingsinweek>
+        <div class="w-full flex justify-between">
+            <div class="flex-col" *ngFor="let item of weektrainings">
+                <div class="flex text-[#295FCC] text-lg justify-center">
+                    <h4 width="40px">{{item.name.slice(0,2)}}</h4>
+                </div>
+                <div class="flex">
+                    <img *ngIf="item.training === false" src="../../../../assets/Group 67.png" width="40px" alt="">
+                    <img *ngIf="item.training === true" src="../../../../assets/Group 66.png" width="40px" alt="">
+                    <img *ngIf="item.training === 'Non'" src="../../../../assets/Vector (1).png" width="40px" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 </div>
